force-app/main/default/objects/Referral__c/fields/Referral_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Referral_Assignments__c</fullName>
    <description>Ensures that only the allowed number of assignments are made on a referral.</description>
    <label>Referral Assignments</label>
    <summaryFilterItems>
        <field>Referral_Assignment__c.Currently_Assigned__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Referral_Assignment__c.Referral__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>