force-app/main/default/objects/Referral__c/fields/Referring_Deputy__c.field-meta.xml
<CustomField>
    <fullName>Referring_Deputy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referring Deputy</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>