force-app/main/default/objects/Referral__c/fields/Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Request_Status__c</fullName>
    <label>Referral Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Referral</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
                <default>true</default>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>Request Sent</fullName>
            </value>
            <value>
                <fullName>Request Approved</fullName>
            </value>
            <value>
                <fullName>Review in Process</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Referral Accepted</fullName>
            </value>
            <value>
                <fullName>Accepted Representation</fullName>
            </value>
            <value>
                <fullName>Trial Scheduled</fullName>
            </value>
            <value>
                <fullName>Trial Pending</fullName>
            </value>
            <value>
                <fullName>Mediation</fullName>
            </value>
            <value>
                <fullName>Court Decision</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Fully Collected</fullName>
            </value>
            <value>
                <fullName>Partial Collected</fullName>
            </value>
            <value>
                <fullName>Referred to Claimant</fullName>
            </value>
            <value>
                <fullName>Pending Restitution Fund</fullName>
            </value>
            <value>
                <fullName>Legal Review Pending</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Investigation Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>