force-app/main/default/objects/Referral__c/fields/Second_Reminder_Days__c.field-meta.xml
<CustomField>
    <fullName>Second_Reminder_Days__c</fullName>
    <description>Business days after being sent for referral that a reminder should be set.</description>
    <formula>/* setup BOFE Legal Referrals settings */ 
IF ( 
( 
RecordType.DeveloperName = &#39;BOFE_Civil_Litigation_Referral&#39; 
|| RecordType.DeveloperName = &#39;BOFE_Request_for_Legal_Court_Action&#39; 
|| RecordType.DeveloperName = &#39;BOFE_Request_for_Legal_Services&#39; 
) 
, 8 
, null 
)</formula>
    <label>Second Reminder Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>