force-app/main/default/objects/Referral__c/fields/Secondary_Approver_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Approver_Approval_Date__c</fullName>
    <label>Secondary-Approver Approval Date</label>
    <type>Date</type>
</CustomField>