force-app/main/default/objects/Referral__c/fields/Send_to_BOFE__c.field-meta.xml
<CustomField>
    <fullName>Send_to_BOFE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to BOFE</label>
    <type>Checkbox</type>
</CustomField>