force-app/main/default/objects/Referral__c/fields/Settlement_Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Amount_Collected__c</fullName>
    <label>Settlement Amount Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>