force-app/main/default/objects/Referral__c/fields/Settlement_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Amount_Due__c</fullName>
    <label>Settlement Amount Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>