force-app/main/default/objects/Referral__c/fields/SOL_per_CCP_338__c.field-meta.xml
<CustomField>
    <fullName>SOL_per_CCP_338__c</fullName>
    <label>SOL per CCP 338</label>
    <type>Date</type>
</CustomField>