force-app/main/default/objects/Referral__c/fields/Sr_Approver__c.field-meta.xml
<CustomField>
    <fullName>Sr_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sr Deputies: Fill in RCI, BOFE or WCA Sr and submit for approval</inlineHelpText>
    <label>Sr Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sr_Approval</relationshipName>
    <type>Lookup</type>
</CustomField>