force-app/main/default/objects/Referral__c/fields/Sr_Deputy_Email__c.field-meta.xml
<CustomField>
    <fullName>Sr_Deputy_Email__c</fullName>
    <label>Sr Deputy Email</label>
    <type>Email</type>
</CustomField>