force-app/main/default/objects/Referral__c/fields/Strategic_Referral__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Referral__c</fullName>
    <label>Strategic Referral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOFE</fullName>
            </value>
            <value>
                <fullName>Wage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>