force-app/main/default/objects/Referral__c/fields/Total_Penalties_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Penalties_Collected__c</fullName>
    <label>Total Penalties Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>