force-app/main/default/objects/Referral__c/fields/Total_Wages_Collected__c.field-meta.xml
<CustomField>
    <fullName>Total_Wages_Collected__c</fullName>
    <description>Wages collected as a result of litigation</description>
    <label>Total Wages Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>