force-app/main/default/objects/Referral__c/fields/Trial_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Date__c</fullName>
    <description>For referrals resulting in a trial, the date on which the trial is to occur.</description>
    <label>Trial Date</label>
    <type>Date</type>
</CustomField>