force-app/main/default/objects/Referral__c/fields/Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request__c</fullName>
    <description>Selection driven by rec type</description>
    <label>Type of Request</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>240 Bond</fullName>
            </value>
            <value>
                <fullName>Affirmative Litigation</fullName>
            </value>
            <value>
                <fullName>Alter Ego</fullName>
            </value>
            <value>
                <fullName>Appeal Hearing Representation</fullName>
            </value>
            <value>
                <fullName>Arbitration</fullName>
            </value>
            <value>
                <fullName>Civil Action</fullName>
            </value>
            <value>
                <fullName>Civil Litigation Referral Affirmative Lawsuit</fullName>
            </value>
            <value>
                <fullName>Consultation - Appeal Hearing</fullName>
            </value>
            <value>
                <fullName>Consultation - BOFE Attorney</fullName>
            </value>
            <value>
                <fullName>Consultation - Citation</fullName>
            </value>
            <value>
                <fullName>Consultation - Interrogatory</fullName>
            </value>
            <value>
                <fullName>Consultation - JEU Attorney</fullName>
            </value>
            <value>
                <fullName>Consultation - Joint Liability</fullName>
            </value>
            <value>
                <fullName>Consultation - Judgment Enforcement</fullName>
            </value>
            <value>
                <fullName>Consultation - LC226.8</fullName>
            </value>
            <value>
                <fullName>Consultation - LC2810</fullName>
            </value>
            <value>
                <fullName>Consultation - Litigation</fullName>
            </value>
            <value>
                <fullName>Consultation - Livadas</fullName>
            </value>
            <value>
                <fullName>De Novo Referral</fullName>
            </value>
            <value>
                <fullName>Enforcement Subpoena (MTC)</fullName>
            </value>
            <value>
                <fullName>Injunction - 238</fullName>
            </value>
            <value>
                <fullName>Injunction - 240</fullName>
            </value>
            <value>
                <fullName>Injunction - 3700</fullName>
            </value>
            <value>
                <fullName>Injunction - Car Wash</fullName>
            </value>
            <value>
                <fullName>Inspection Warrant</fullName>
            </value>
            <value>
                <fullName>JEU Referral</fullName>
            </value>
            <value>
                <fullName>JEU Referral to Car Wash Fund</fullName>
            </value>
            <value>
                <fullName>JEU Referral to Farm Worker Fund</fullName>
            </value>
            <value>
                <fullName>JEU Referral to Garment Fund</fullName>
            </value>
            <value>
                <fullName>JEU Referral Without Judgment (Unserved ODA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>