force-app/main/default/objects/Referral__c/fields/Type_of_Request_Other__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Request_Other__c</fullName>
    <label>Type of Request Other</label>
    <type>TextArea</type>
</CustomField>