force-app/main/default/objects/Referral__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOFE</fullName>
            </value>
            <value>
                <fullName>RCI</fullName>
            </value>
            <value>
                <fullName>PW</fullName>
            </value>
            <value>
                <fullName>DOSH</fullName>
            </value>
            <value>
                <fullName>DAS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>