force-app/main/default/objects/Referral__c/fields/Wage_Justice_Center_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Wage_Justice_Center_Disposition__c</fullName>
    <label>Wage Justice Center Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>