force-app/main/default/objects/Referral__c/fields/Warrant_Number__c.field-meta.xml
<CustomField>
    <fullName>Warrant_Number__c</fullName>
    <description>Referral field added for WCA Referral to JEU to populate Garment Fund Referral Report.</description>
    <label>Warrant Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>