force-app/main/default/objects/Referral__c/fields/zApproval_Date__c.field-meta.xml
<CustomField>
    <fullName>zApproval_Date__c</fullName>
    <label>zApproval Date</label>
    <type>Date</type>
</CustomField>