force-app/main/default/objects/Referral__c/recordTypes/BOFE_Civil_Litigation_Referral.recordType-meta.xml
<RecordType>
    <fullName>BOFE_Civil_Litigation_Referral</fullName>
    <active>true</active>
    <description>Referrals for affirmative action</description>
    <label>BOFE Civil Litigation Referral</label>
</RecordType>