force-app/main/default/objects/Referral__c/recordTypes/BOFE_Referral_to_District_Attorney.recordType-meta.xml
<RecordType>
    <fullName>BOFE_Referral_to_District_Attorney</fullName>
    <active>true</active>
    <label>BOFE Referral to District Attorney</label>
</RecordType>