force-app/main/default/objects/Referral__c/recordTypes/BOFE_Request_for_JEU_Support.recordType-meta.xml
<RecordType>
    <fullName>BOFE_Request_for_JEU_Support</fullName>
    <active>true</active>
    <description>For when BOFE needs to email JEU for assistance with Levies, Stop Orders, ect.</description>
    <label>BOFE Request for JEU Support</label>
</RecordType>