force-app/main/default/objects/Referral__c/recordTypes/BOFE_Request_for_Legal_Court_Action.recordType-meta.xml
<RecordType>
    <fullName>BOFE_Request_for_Legal_Court_Action</fullName>
    <active>true</active>
    <description>Various types of court orders sought</description>
    <label>BOFE Request for Legal Court Action</label>
</RecordType>