force-app/main/default/objects/Referral__c/recordTypes/JEU_Referral_to_Legal.recordType-meta.xml
<RecordType>
    <fullName>JEU_Referral_to_Legal</fullName>
    <active>true</active>
    <label>JEU Referral to Legal</label>
</RecordType>