force-app/main/default/objects/Referral__c/recordTypes/RCI_Demand_Enforcement.recordType-meta.xml
<RecordType>
    <fullName>RCI_Demand_Enforcement</fullName>
    <active>true</active>
    <label>RCI Cause Finding - Enforcement Legal</label>
</RecordType>