force-app/main/default/objects/Referral__c/recordTypes/RCI_Legal_Opinion.recordType-meta.xml
<RecordType>
    <fullName>RCI_Legal_Opinion</fullName>
    <active>true</active>
    <label>RCI Legal Opinion</label>
</RecordType>