force-app/main/default/objects/Referral__c/recordTypes/RCI_Referral.recordType-meta.xml
<RecordType>
    <fullName>RCI_Referral</fullName>
    <active>true</active>
    <description>RCI</description>
    <label>RCI Referral</label>
</RecordType>