force-app/main/default/objects/Referral__c/recordTypes/RCI_Referral_for_H_S_Hearing.recordType-meta.xml
<RecordType>
    <fullName>RCI_Referral_for_H_S_Hearing</fullName>
    <active>true</active>
    <label>RCI Referral for H&amp;S Hearing</label>
</RecordType>