force-app/main/default/objects/Referral__c/recordTypes/RCI_Referral_to_BOFE.recordType-meta.xml
<RecordType>
    <fullName>RCI_Referral_to_BOFE</fullName>
    <active>true</active>
    <description>RCI to BOFE</description>
    <label>RCI Referral to BOFE</label>
</RecordType>