force-app/main/default/objects/Referral__c/recordTypes/RCI_Referral_to_CIU.recordType-meta.xml
<RecordType>
    <fullName>RCI_Referral_to_CIU</fullName>
    <active>true</active>
    <label>RCI Referral to CIU</label>
</RecordType>