force-app/main/default/objects/Referral__c/recordTypes/RCI_Referral_to_JEU.recordType-meta.xml
<RecordType>
    <fullName>RCI_Referral_to_JEU</fullName>
    <active>true</active>
    <label>RCI Referral to JEU</label>
</RecordType>