force-app/main/default/objects/Referral__c/recordTypes/RCI_Referral_to_Mediation.recordType-meta.xml
<RecordType>
    <fullName>RCI_Referral_to_Mediation</fullName>
    <active>true</active>
    <label>RCI Referral to Mediation</label>
</RecordType>