force-app/main/default/objects/Referral__c/recordTypes/RCI_Request_for_Legal_Action.recordType-meta.xml
<RecordType>
    <fullName>RCI_Request_for_Legal_Action</fullName>
    <active>true</active>
    <label>RCI Request for Legal Action</label>
</RecordType>