force-app/main/default/objects/Referral__c/recordTypes/WCA_Garment_Referral_to_BOFE.recordType-meta.xml
<RecordType>
    <fullName>WCA_Garment_Referral_to_BOFE</fullName>
    <active>true</active>
    <description>Creates a referral request to BOFE from a WCA or Garment Case which is approved and triggers the creation of a BOFE case from the current case</description>
    <label>WCA/Garment Referral to BOFE</label>
</RecordType>