force-app/main/default/objects/Referral__c/recordTypes/WCA_Garment_Referral_to_BOFE_Approved.recordType-meta.xml
<RecordType>
    <fullName>WCA_Garment_Referral_to_BOFE_Approved</fullName>
    <active>true</active>
    <description>Allows page layout to display the refer to BOFE only when the referral has been approved. Approval process changes rec type.</description>
    <label>WCA/Garment Referral to BOFE - Approved</label>
</RecordType>