force-app/main/default/objects/Referral__c/recordTypes/WCA_Legal_Opinion.recordType-meta.xml
<RecordType>
    <fullName>WCA_Legal_Opinion</fullName>
    <active>true</active>
    <description>Wage - Request for legal opinion</description>
    <label>WCA Legal Opinion</label>
</RecordType>