force-app/main/default/objects/Referral__c/validationRules/Determine_Type_required_for_RCI_Referral.validationRule-meta.xml
<ValidationRule>
    <fullName>Determine_Type_required_for_RCI_Referral</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Case__r.Determination_Type__c))  &amp;&amp;  RecordType.DeveloperName = &#39;RCI_Cause_Finding_Approval&#39; &amp;&amp;  Case__r.RecordType.DeveloperName = &#39;RCI&#39;</errorConditionFormula>
    <errorMessage>Determination Type is required on Case Management in order to create a new RCI Report/Determination Approval referral record.</errorMessage>
</ValidationRule>