force-app/main/default/objects/Referral__c/validationRules/Req_assigned_Deputy_on_registration.validationRule-meta.xml
<ValidationRule>
    <fullName>Req_assigned_Deputy_on_registration</fullName>
    <active>true</active>
    <description>Requires a related registration to have a deputy assigned</description>
    <errorConditionFormula>RecordType.DeveloperName = &#39;RS_Refer_To_BOFE&#39; &amp;&amp;
ISBLANK ( Registration__r.Assigned_Deputy__c )</errorConditionFormula>
    <errorMessage>Please assign a deputy to the registration before creating the registration.</errorMessage>
</ValidationRule>